--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk>>>>>>> 42c37219c5e134865e6b048854cd322b82bfe2d8:.gitignore
+01 - design/Project - UX, UI.sketch
